Fix chunk route
