# server/routes/chunk.routes.ts
@@ -6,7 +6,6 @@ import {uploadController} from "../controllers/upload.controller";
 const router = Router();
 
 router.post('/:recordId', [isAuthorized, uploadController.upload, uploadController.verifyUpload, isAuthorized, ChunkController.addChunk]);
-router.get('/:recordId', [isAuthorized, ChunkController.getAllChunks]);
 router.get('/:id', [isAuthorized, ChunkController.getChunk]);
 
 export default router;
