# server/routes/record.routes.ts
@@ -2,6 +2,7 @@ import { Router } from 'express';
 import {RecordController} from "../controllers/record.controller";
 import { uploadController } from "../controllers/upload.controller";
 import {isAuthorized} from "../middlewares/authorization";
+import {ChunkController} from "../controllers/chunk.controller";
 
 const router = Router();
 
@@ -12,5 +13,6 @@ router.delete('/:id', [isAuthorized, RecordController.deleteRecord]);
 router.get('/public', [isAuthorized, RecordController.getAllPublicRecords]);
 router.get('/', [isAuthorized, RecordController.getAllRecordsById]);
 router.get('/:id', [isAuthorized, RecordController.getRecord]);
+router.get('/chunk/:recordId', [isAuthorized, ChunkController.getAllChunks]);
 
 export default router;
